SERVER-13611 fix sort elimination in the case of trailing fields