src/mongo/db/query/query_planner_test.cpp
@@ -1086,7 +1086,7 @@ namespace {
     }
 
     //
-    // Basic sort elimination
+    // Sort elimination
     //
 
     TEST_F(QueryPlannerTest, BasicSortElim) {
@@ -1109,6 +1109,31 @@ namespace {
                                 "node: {cscan: {dir: 1, filter: {a: 5}}}}}");
         assertSolutionExists("{fetch: {filter: null, node: {ixscan: "
                                 "{filter: null, pattern: {a: 1, b: 1}}}}}");
+    }
+
+    // SERVER-13611: test that sort elimination still works if there are
+    // trailing fields in the index.
+    TEST_F(QueryPlannerTest, SortElimTrailingFields) {
+        addIndex(BSON("a" << 1 << "b" << 1 << "c" << 1));
+        runQuerySortProj(fromjson("{a: 5}"), BSON("b" << 1), BSONObj());
+
+        ASSERT_EQUALS(getNumSolutions(), 2U);
+        assertSolutionExists("{sort: {pattern: {b: 1}, limit: 0, "
+                                "node: {cscan: {dir: 1, filter: {a: 5}}}}}");
+        assertSolutionExists("{fetch: {filter: null, node: {ixscan: "
+                                "{filter: null, pattern: {a: 1, b: 1, c: 1}}}}}");
+    }
+
+    // Sort elimination with trailing fields where the sort direction is descending.
+    TEST_F(QueryPlannerTest, SortElimTrailingFieldsReverse) {
+        addIndex(BSON("a" << 1 << "b" << 1 << "c" << 1 << "d" << 1));
+        runQuerySortProj(fromjson("{a: 5, b: 6}"), BSON("c" << -1), BSONObj());
+
+        ASSERT_EQUALS(getNumSolutions(), 2U);
+        assertSolutionExists("{sort: {pattern: {c: -1}, limit: 0, "
+                                "node: {cscan: {dir: 1, filter: {a: 5, b: 6}}}}}");
+        assertSolutionExists("{fetch: {filter: null, node: {ixscan: "
+                                "{filter: null, dir: -1, pattern: {a: 1, b: 1, c: 1, d: 1}}}}}");
     }
 
     //
